added unstyled content to frontfacing site

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
@@ -13,7 +15,9 @@
   <link href="https://fonts.googleapis.com/css?family=Abel|Anton|Quicksand|Source+Serif+Pro" rel="stylesheet">
 
   <link rel="icon" href="/images/fav.ico" type="image/gif" sizes="16x16">
-  <title>Sample React App</title>
+  <title>Skelly, Muchmore & Oberbillig LLC - Mediation and Arbitration Services</title>
+    <meta name="description" content="Skelly, Muchmore & Oberbillig Mediation Services, LLP is a partnership between Judge Christopher Skelly, Charles J. Muchmore, and Judge Robert H. Oberbillig. The firm offers mediation and arbitration services throughout Arizona." />
+
 </head>
 <body>
   <div id="root"></div>
